# zarr-python-planning

./: .gitignore  LICENSE  README.md  TRIAGE.md
api-preview/: README.md  mkdocs.yml  pyproject.toml
api-preview/docs/: about-preview.md  deferred-items.md  migration.md  proposals  stack.md
api-preview/docs/api/: array.md  codec.md  concurrency.md  config.md  create.md  dtype.md  engines.md  errors.md  group.md  hierarchy.md  index.md  metadata.md  observability.md  open.md  store.md
api-preview/docs/removed/: buffer.md  codecs.md  config.md  constructors.md  index.md  indexing.md  storage.md  stores.md  sync.md
api-preview/src/zarr/: __init__.py  array.py  concurrency.py  config.py  exceptions.py  group.py  hierarchy.py  observability.py
api-preview/src/zarr/codec/: __init__.py
api-preview/src/zarr/dtype/: __init__.py
api-preview/src/zarr/engines/: __init__.py  python.py  tensorstore.py  zarrs.py
api-preview/src/zarr/metadata/: __init__.py
api-preview/src/zarr/store/: __init__.py  backends.py  path.py  protocols.py  types.py  wrappers.py
api-preview/src/zarr_legacy/: __init__.py  _util.py  abc_buffer.py  abc_codec.py  abc_store.py  api.py  array.py  config.py  storage.py  sync.py
proposals/: caching.md  codecs.md  concurrency.md  configuration.md  consolidated-metadata.md  coordinated-writes.md  data-types.md  functional-core.md  gpu.md  hierarchy-layer.md  lazy-indexing.md  migration-tooling.md  missing-apis.md  observability.md  packaging.md  performance.md  stores-api.md  stores-caching.md  stores-conformance.md  stores-range-coalescing.md  (+3 more)
(+2 files in other folders)
